# cookiecutter-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.module_name}}/: README.md  pyproject.toml  setup.cfg
{{cookiecutter.module_name}}/.github/workflows/: ci.yaml
